refector: melhora da elegibilidade e quebra de responsabilidade de CarePlanService